--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,9 +1,11 @@
 .app {
   display: grid;
-  grid-template-columns: auto 10fr 4fr;
+  grid-template-columns: auto 10fr 3fr;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+
+  font-family: "Roboto", "sans-serif";
 
   @media (max-width: 1024px) {
     grid-template-columns: 1fr;
