--- a/src/components/main/TableItem.module.scss
+++ b/src/components/main/TableItem.module.scss
@@ -12,4 +12,17 @@
   p {
     @apply text-[#808080];
   }
+  .play {
+    @apply w-[40px] aspect-square rounded-md border-[1px] border-[#ddd]  mr-[1.5rem] flex items-center justify-center duration-500 cursor-pointer;
+
+    &:hover {
+      background-color: #04d361;
+      svg {
+        path {
+          fill: #ffffff;
+          transition: all 0.5s;
+        }
+      }
+    }
+  }
 }
