--- a/src/Shared/variables.module.scss
+++ b/src/Shared/variables.module.scss
@@ -1,5 +1,7 @@
 $toBackgroundColor: rgb(229, 229, 229);
+$initialPlayerPosition: calc(100vh - 40px);
 
 :export {
   toBackgroundColor: $toBackgroundColor;
+  initialPlayerPostion: $initialPlayerPosition;
 }
