--- a/src/components/main/Podcast.module.scss
+++ b/src/components/main/Podcast.module.scss
@@ -62,7 +62,7 @@
       grid-template-columns: 1fr 15ch 15ch 40px;
       align-items: center;
       gap: 1rem;
-      @apply uppercase font-medium text-[#808080] mr-[1.5rem] mb-3 border-b-[1px] border-[#000];
+      @apply uppercase font-medium text-[#808080] mr-[1.5rem] mb-3 border-b-[1px] border-[#000] px-2;
 
       p {
         @apply text-[0.85rem];
