Feat: Loading das páginas

--- a/src/components/main/Home.module.scss
+++ b/src/components/main/Home.module.scss
@@ -1,5 +1,5 @@
 .home {
-  @apply w-full h-full flex items-center justify-center gap-1 flex-col;
+  @apply w-full h-screen flex items-center justify-center gap-1 flex-col;
 
   .image_container {
     @apply w-4/12 mb-10;
