--- a/src/components/menu/PodcastIcon.module.scss
+++ b/src/components/menu/PodcastIcon.module.scss
@@ -1,5 +1,5 @@
 .podcast {
-  @apply block w-[60px] aspect-square;
+  @apply block w-full aspect-square;
 
   background: linear-gradient(
       100deg,
