--- a/src/components/player/Player.module.scss
+++ b/src/components/player/Player.module.scss
@@ -37,14 +37,10 @@
         &:hover {
           @apply opacity-70;
         }
-
-        &[data-previous] {
-          @apply rotate-180;
-        }
       }
 
       .play {
-        @apply opacity-50 cursor-pointer duration-300 p-2 bg-[#9F75FF] rounded-2xl;
+        @apply opacity-50 cursor-pointer duration-300 p-2 bg-[#9F75FF] rounded-2xl flex items-center justify-center w-[42px] aspect-square;
 
         &:hover {
           @apply opacity-70;
